Update 08. Lesson Plan Week 8.md

--- a/Introduction to AI/lesson_plans/08. Lesson Plan Week 8.md
+++ b/Introduction to AI/lesson_plans/08. Lesson Plan Week 8.md
@@ -1,4 +1,4 @@
-# Lesson Plan: Artificial Intelligence Provacy and Surveillance - Class Session 8
+# Lesson Plan: Artificial Intelligence: Privacy and Surveillance - Class Session 8
 
 **Total Time: 2 hours and 30 minutes**
 
