Update and rename 03. Lesson Plan Week 3.md to 03. Lesson Plan Week 3: Decision Making.md

--- a/Introduction to AI/lesson_plans/03. Lesson Plan Week 3: Decision Making.md
+++ b/Introduction to AI/lesson_plans/03. Lesson Plan Week 3: Decision Making.md
@@ -1,4 +1,4 @@
-# Lesson Plan: Artificial Intelligence - Class Session 3
+# Lesson Plan: Artificial Intelligence: Decision Making - Class Session 3
 
 **Total Time: 2 hours and 30 minutes**
 
