Update 04. Lesson Plan Week 4: AI and Automation.md

--- a/Introduction to AI/lesson_plans/04. Lesson Plan Week 4: AI and Automation.md
+++ b/Introduction to AI/lesson_plans/04. Lesson Plan Week 4: AI and Automation.md
@@ -1,4 +1,4 @@
-# Lesson Plan: Artificial Intelligence - Class Session 4 (Understanding AI Ethics)
+# Lesson Plan: Artificial Intelligence - Class Session 4 (Intro to AI Ethics)
 
 **Total Time: 2 hours and 30 minutes**
 
@@ -7,68 +7,69 @@
 - [Learning Objectives](#learning-objectives)
 - [Materials Needed](#materials-needed)
 - [Schedule](#schedule)
-  - [1. Opening Poll & Reflection Activity (10 minutes)](#1-opening-poll--reflection-activity-10-minutes)
+  - [1. Opening Prompt & Reflection (10 minutes)](#1-opening-prompt--reflection-10-minutes)
   - [2. Review of Previous Session (10 minutes)](#2-review-of-previous-session-10-minutes)
   - [3. Lecture: Introduction to AI Ethics (25 minutes)](#3-lecture-introduction-to-ai-ethics-25-minutes)
-  - [4. Case Study Discussion: Ethical Dilemmas in AI (30 minutes)](#4-case-study-discussion-ethical-dilemmas-in-ai-30-minutes)
-  - [5. Group Activity: AI Ethics Role-Play (30 minutes)](#5-group-activity-ai-ethics-role-play-30-minutes)
-  - [6. Workshop: Creating Ethical Guidelines for AI (25 minutes)](#6-workshop-creating-ethical-guidelines-for-ai-25-minutes)
-  - [7. Q&A and Open Discussion (10 minutes)](#7-qa-and-open-discussion-10-minutes)
-  - [8. Closing and Assignment Overview (10 minutes)](#8-closing-and-assignment-overview-10-minutes)
+  - [4. Guided Activity: Ethical Scenarios (25 minutes)](#4-guided-activity-ethical-scenarios-25-minutes)
+  - [5. Discussion: Global Perspectives on AI Ethics (20 minutes)](#5-discussion-global-perspectives-on-ai-ethics-20-minutes)
+  - [6. Case Exploration Workshop (30 minutes)](#6-case-exploration-workshop-30-minutes)
+  - [7. Q&A and Assignment Preview (10 minutes)](#7-qa-and-assignment-preview-10-minutes)
+  - [8. Exit Reflection (10 minutes)](#8-exit-reflection-10-minutes)
 - [Assignments](#assignments)
-  - [Assignment 1: AI Ethics Case Analysis](#assignment-1-ai-ethics-case-analysis)
-  - [Assignment 2: Reflection Journal](#assignment-2-reflection-journal)
 
 ## Overview
-This session focuses on the ethical dimensions of artificial intelligence. Students will engage deeply with ethical concepts, real-world dilemmas, and collaboratively create ethical guidelines.
+This session introduces core concepts of AI ethics and prepares students for deeper ethical analysis later in the semester. Students explore sample ethical frameworks, examine cross-cultural regulatory differences, and begin identifying potential case study topics for future investigation.
 
 ## Learning Objectives
-- Understand foundational ethical principles relevant to AI.
-- Analyze ethical dilemmas arising from AI applications.
-- Collaboratively develop practical ethical guidelines for AI use.
+- Understand key principles and values in AI ethics (fairness, accountability, transparency, etc.).
+- Compare international approaches to AI regulation, particularly the EU AI Ethics Guidelines.
+- Analyze example ethical dilemmas in AI.
+- Begin identifying possible case study topics.
 
 ## Materials Needed
-- Projector and screen for presentations
-- Internet access for research and collaborative activities
-- Laptops or mobile devices for interactive sessions
-- Online collaborative tools (Google Docs, Padlet)
+- Slides on AI ethical principles
+- EU AI Ethics Guidelines overview (linked below)
+- Printed or digital ethical scenario prompts
+- Small group workspace (Google Docs, LMS, etc.)
 
 ## Schedule
 
-### 1. Opening Poll & Reflection Activity (10 minutes)
-- Quick poll: "Have you encountered ethical concerns or questions related to AI? Briefly describe."
-- Brief class discussion to explore shared experiences and perspectives.
+### 1. Opening Prompt & Reflection (10 minutes)
+- Prompt: "Can AI make a wrong decision? Who is responsible when it does?"
+- Short written response and pair-share discussion.
 
 ### 2. Review of Previous Session (10 minutes)
-- Recap key concepts and activities from Week 3.
+- Recap Week 3 content and preview ethical relevance.
 
 ### 3. Lecture: Introduction to AI Ethics (25 minutes)
-- Overview of ethical principles: fairness, accountability, transparency, privacy.
-- Discussion on historical and current ethical challenges in AI.
+- Presentation on key ethical concerns: bias, transparency, accountability, data privacy.
+- Overview of ethical frameworks (utilitarianism, deontology, virtue ethics).
 
-### 4. Case Study Discussion: Ethical Dilemmas in AI (30 minutes)
-- Small-group discussions analyzing selected case studies illustrating ethical challenges.
-- Groups present insights and conclusions to the class.
+### 4. Guided Activity: Ethical Scenarios (25 minutes)
+- Students work in groups to evaluate real-world scenarios involving ethical dilemmas in AI (e.g., facial recognition, hiring algorithms, predictive policing).
+- Each group applies a different ethical lens.
 
-### 5. Group Activity: AI Ethics Role-Play (30 minutes)
-- Role-playing scenarios where students assume different stakeholders' perspectives on an AI ethics issue.
-- Facilitated class discussion on the insights gained from role-playing.
+### 5. Discussion: Global Perspectives on AI Ethics (20 minutes)
+- Introduce and contrast the EU AI Ethics Guidelines with U.S. and other regional approaches.
+- What values are prioritized? How do protections differ?
 
-### 6. Workshop: Creating Ethical Guidelines for AI (25 minutes)
-- Collaborative workshop to draft practical ethical guidelines for AI usage within various contexts.
-- Groups share their guidelines, receiving feedback from peers and instructor.
+### 6. Case Exploration Workshop (30 minutes)
+- Students explore potential case studies using news stories, articles, or instructor-provided examples.
+- Begin thinking about which cases they might want to explore further in Week 7.
 
-### 7. Q&A and Open Discussion (10 minutes)
-- Address lingering questions, explore additional ethical issues brought up by students.
+### 7. Q&A and Assignment Preview (10 minutes)
+- Instructor introduces the structure of the upcoming AI Ethics Case Study (assigned in Week 7).
+- Answer initial questions and explain how today’s material will build toward that assignment.
 
-### 8. Closing and Assignment Overview (10 minutes)
-- Summarize the session's key learnings.
-- Introduce and explain upcoming assignments.
+### 8. Exit Reflection (10 minutes)
+- Prompt: "Which ethical value do you think is most important in AI? Why?"
+- Brief written response, collected or submitted via LMS.
 
 ## Assignments
+- **Previewed this week:** AI Ethics Case Study Assignment (to be officially assigned in Week 7)
+- Students should begin identifying a potential ethical case and reviewing examples from the news or research.
+- Students will bring their selected case study and draft notes for discussion in Week 7 before writing begins.
 
-### Assignment 1: AI Ethics Case Analysis
-- Select an AI ethics case study from class or a recent news article. Submit a detailed analysis (1-2 pages) identifying ethical issues, stakeholders affected, and potential solutions or guidelines.
+**Resource Highlight:**
+- [EU AI Ethics Guidelines](https://digital-strategy.ec.europa.eu/en/library/ethics-guidelines-trustworthy-ai)
 
-### Assignment 2: Reflection Journal
-- Reflect on your understanding of AI ethics, discussing how this session has influenced your thinking. Include your thoughts on how AI ethical considerations might shape future technological developments.
