Update 04. Lesson Plan Week 4: AI and Automation.md

--- a/Introduction to AI/lesson_plans/04. Lesson Plan Week 4: AI and Automation.md
+++ b/Introduction to AI/lesson_plans/04. Lesson Plan Week 4: AI and Automation.md
@@ -66,9 +66,9 @@ This session introduces core concepts of AI ethics and prepares students for dee
 - Brief written response, collected or submitted via LMS.
 
 ## Assignments
-- **Previewed this week:** AI Ethics Case Study Assignment (to be officially assigned in Week 7)
-- Students should begin identifying a potential ethical case and reviewing examples from the news or research.
-- Students will bring their selected case study and draft notes for discussion in Week 7 before writing begins.
+- **Ethics Case Exploration Brief (Reflection Journal Entry):** Students will complete a short write-up (300–500 words) describing a real-world ethical issue involving AI. This should include a brief description of the AI system, the ethical issues involved, stakeholders affected, and the student’s initial personal and ethical reflections.
+- This assignment is to be included as a labeled entry in the student's AI Reflection Journal, not submitted separately.
+- Students will bring this case to class in Week 7 for discussion and further development into a formal Ethics Case Study.
 
 **Resource Highlight:**
 - [EU AI Ethics Guidelines](https://digital-strategy.ec.europa.eu/en/library/ethics-guidelines-trustworthy-ai)
