Update 02. Historical Context.md

--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -19,7 +19,9 @@ This framing prioritizes **behavioral indistinguishability** as the test of mach
 ---
 
 ## Norbert Wiener – Cybernetics and Feedback Systems
-Wiener’s cybernetics introduced the idea of control and communication in the animal and machine, emphasizing feedback loops and system adaptation. His work laid the groundwork for understanding dynamic, interactive systems.
+Wiener’s cybernetics introduced the idea of control and communication in the animal and machine, emphasizing feedback loops, system adaptation, and the regulation of behavior through signals and responses. At its core, cybernetics is concerned with how systems maintain stability and respond to environmental changes. Wiener proposed that both biological and mechanical systems could be modeled similarly, with feedback mechanisms governing actions to maintain desired outcomes.  
+
+His theories laid the groundwork for systems thinking, robotics, real-time computational systems, and adaptive algorithms—all crucial to the development of interactive technologies and intelligent systems.  
 
 **Contrast with BBS:**
 - Cybernetics conceptualizes agency in terms of input-output relationships and systemic regulation.
