--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -1,3 +1,100 @@
+## Theoretical Frameworks and Historical Context: Foundations for Collaborative AI in BBS
+
+This document expands upon some theoretical models that inform the Balanced Blended Space (BBS) framework, particularly focusing on the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in computational philosophy, help contextualizing and contrasting BBS philosophy.
+
+---
+
+#### Alan Turing – Computational Foundations and the Imitation Game
+
+Turing's legacy lies in foundational ideas about machine intelligence and the boundaries of cognition. In his seminal 1950 paper, *"Computing Machinery and Intelligence,"* Turing introduces what he calls the **Imitation Game**, a thought experiment in which a human judge interacts through text with two participants—one human and one machine—and must determine which is which. If the machine can successfully imitate human responses to the point that the judge cannot reliably distinguish it from the human, the machine is said to exhibit intelligent behavior.
+
+This framing prioritizes **behavioral indistinguishability** as the test of machine intelligence.
+
+**Contrast with BBS:**
+
+- Turing's approach frames intelligence as pass/fail based on deception and equivalence.
+- BBS is not concerned with mimicry but with **collaboration** and **co-agency**—the capacity of computational intelligence to contribute authentically within a shared space.
+
+**Suggested Reading:**
+
+- Turing, Alan M. (1950). *Computing Machinery and Intelligence*. Mind, 59(236), 433–460. [Read here](https://courses.cs.umbc.edu/471/papers/turing.pdf)
+
+---
+
+#### Norbert Wiener – Cybernetics and Feedback Systems
+
+Wiener’s cybernetics introduced the idea of control and communication in the animal and machine, emphasizing feedback loops, system adaptation, and the regulation of behavior through signals and responses. At its core, cybernetics is concerned with how systems maintain stability and respond to environmental changes. Wiener proposed that both biological and mechanical systems could be modeled similarly, with feedback mechanisms governing actions to maintain desired outcomes.
+
+**Suggested Reading:**
+
+- Wiener, Norbert. (1948). *Cybernetics: Or Control and Communication in the Animal and the Machine*. MIT Press. [Read online](https://monoskop.org/images/0/0a/Wiener_Norbert_Cybernetics_or_Control_and_Communication_in_the_Animal_and_the_Machine_2nd_ed.pdf)
+
+His theories laid the groundwork for systems thinking, robotics, real-time computational systems, and adaptive algorithms—all crucial to the development of interactive technologies and intelligent systems.
+
+**Contrast with BBS:**
+
+- Cybernetics conceptualizes agency in terms of input-output relationships and systemic regulation.
+- BBS builds upon this but introduces **intentionality** and **balanced reciprocity**—not just reaction, but co-authorship of outcomes.
+
+---
+
+#### Donna Haraway – Cyborg Theory and Hybrid Subjectivities
+
+Haraway’s *"A Cyborg Manifesto"* challenges essentialist notions of identity, arguing that the boundaries between human, animal, and machine are socially constructed and increasingly porous. The cyborg is presented as a metaphor for rejecting rigid binaries—such as natural vs. artificial or male vs. female—and instead embracing a world of hybrids, networks, and interdependencies. Haraway's cyborg is not just a fusion of biology and technology, but a political and philosophical provocation that destabilizes traditional frameworks of power, control, and epistemology.
+
+Her manifesto was pivotal in feminist science and technology studies, encouraging the view that technology can be a site of resistance and redefinition of identity rather than oppression.
+
+**Alignment with BBS:**
+
+- Haraway’s concept of the cyborg aligns closely with BBS’s **blending** of physical, virtual, and conceptual spaces.
+- Both frameworks reject the notion of AI as separate or subordinate, advocating for **interdependent identities** and spaces.
+
+**Suggested Reading:**
+
+- Haraway, Donna. (1985). *A Cyborg Manifesto: Science, Technology, and Socialist-Feminism in the Late Twentieth Century*. [Read online](https://web.archive.org/web/20201006033401/https://www.writing.upenn.edu/~afilreis/Sci-Cult/haraway-cyborg.html)
+  In *"A Cyborg Manifesto,"* Haraway critiques traditional boundaries between human, animal, and machine. She introduces the cyborg as a hybrid figure that resists binaries—natural/artificial, physical/virtual.
+
+**Alignment with BBS:**
+
+- Haraway’s concept of the cyborg aligns closely with BBS’s **blending** of physical, virtual, and conceptual spaces.
+- Both frameworks reject the notion of AI as separate or subordinate, advocating for **interdependent identities** and spaces.
+
+---
+
+#### Bruno Latour – Actor-Network Theory (ANT)
+
+Latour’s ANT decentralizes agency, suggesting that both human and non-human actors participate in networks of action and meaning-making. Agency is not held but distributed across systems. Rather than isolating intentionality or authorship within human subjects, ANT treats technology, objects, texts, and systems as active participants—or "actants"—in shaping outcomes within complex sociotechnical networks.
+
+This theory is foundational in science and technology studies and challenges traditional hierarchies by flattening the landscape of actors into relational nodes.
+
+**Suggested Reading:**
+- Latour, Bruno. (2005). *Reassembling the Social: An Introduction to Actor-Network-Theory*. Oxford University Press. [Publisher's page](https://global.oup.com/academic/product/reassembling-the-social-9780199256051)
+
+**Alignment and Extension in BBS:**
+
+- BBS shares ANT’s principle of **distributed agency**, but it further formalizes interactions using **mediation pathways** and **SVD syntax**.
+- ANT is descriptive; BBS aims to be **constructive**, offering a framework for designing symmetrical interactions.
+
+Latour’s ANT decentralizes agency, suggesting that both human and non-human actors participate in networks of action and meaning-making. Agency is not held but distributed across systems.
+
+**Alignment and Extension in BBS:**
+
+- BBS shares ANT’s principle of **distributed agency**, but it further formalizes interactions using **mediation pathways** and **SVD syntax**.
+- ANT is descriptive; BBS aims to be **constructive**, offering a framework for designing symmetrical interactions.
+
+---
+
+### Summary Comparison with BBS Philosophy
+
+| Thinker        | Contribution                      | BBS Alignment                          | Key Distinction                         |
+| -------------- | --------------------------------- | -------------------------------------- | --------------------------------------- |
+| Alan Turing    | Machine intelligence, Turing Test | Initiates the question of AI cognition | Focused on imitation, not collaboration |
+| Norbert Wiener | Cybernetics, feedback systems     | Emphasizes responsive interaction      | Lacks emphasis on co-agency             |
+| Donna Haraway  | Cyborg theory, hybridity          | Embraces blended identity and space    | Not a formal design framework           |
+| Bruno Latour   | Actor-Network Theory (ANT)        | Highlights distributed agency          | Descriptive, not prescriptive           |
+
+BBS synthesizes these traditions but adds a distinctive vision: AI is not just present or reactive but can co-create within **balanced, symmetrical spaces** spanning the physical, virtual, and conceptual. By establishing a formal syntax (SVD) and focusing on **mediation**, BBS transforms theory into **applicable design principles** for collaborative systems.
+
 # Theoretical Frameworks and Historical Context: Foundations for Collaborative AI in BBS
 
 This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, particularly focusing on the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.
