Update 02. Historical Context.md

--- a/Collaborative AI/resources/02. Historical Context.md
+++ b/Collaborative AI/resources/02. Historical Context.md
@@ -1,6 +1,6 @@
 ### Theoretical Frameworks and Historical Context: Foundations for Collaborative AI in BBS
 
-This document expands upon the theoretical underpinnings that inform the Balanced Blended Space (BBS) framework, particularly focusing on the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.
+This document provides some detail and resources for some of the theoretical predecessors that have informed and influenced aspects of the Balanced Blended Space (BBS) framework.  In particular, we investigate the transition from traditional models of human-computer interaction to a symmetrical, collaborative AI paradigm. The following thinkers and their frameworks are pivotal in contextualizing and contrasting BBS philosophy.
 
 ---
 
